# bazel-go-basic

./: .bazelrc  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  hello.bzl  hello.md
.github/workflows/: release.yml  tag-and-release.yml  test.yml
proto/: BUILD.bazel  hello.pb.go  hello.proto
test/: BUILD.bazel  main.go  main_test.go
