# LICENSE sha256: c71d239df91726fc519c6eb72d318ec65820627232b2f796219e87dcf35d0ab4
# SPDX-License-Identifier: Apache-2.0

load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

# bazel run //:gazelle
# gazelle:prefix github.com/filmil/bazel-go-basic
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

stardoc(
    name = "hello_doc",
    out = "gen.hello.md",
    input = "hello.bzl",
)

write_source_files(
    name = "update_docs",
    files = {
        "hello.md": "//:hello_doc",
    },
)

bzl_library(
    name = "hello",
    srcs = ["hello.bzl"],
    visibility = ["//visibility:public"],
)
