# LICENSE sha265: c71d239df91726fc519c6eb72d318ec65820627232b2f796219e87dcf35d0ab4

module(
    name = "bazel-go-basic",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "stardoc", version = "0.8.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0")

# Explicitly include rules_android to resolve a transitive dependency conflict
# where CcInfo was removed in newer Bazel versions.
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Uncomment to override
#include("//local:1.MODULE.bazel")
