load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hello_go_proto",
    importpath = "github.com/filmil/bazel-go-basic/proto/hello",
    proto = ":hello_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello",
    embed = [":hello_go_proto"],
    importpath = "github.com/filmil/bazel-go-basic/proto/hello",
    visibility = ["//visibility:public"],
)
